test : refactor test and product code for add duration